gnu/gcc/libmudflap/testsuite/libmudflap.c++/error1-frag.cxx
// PR 26789
// { dg-do compile }

struct A;
A a; // { dg-error "incomplete" }
